[package]
name = "coinbase-v3"
version = "0.1.0"
edition = "2021"
authors = ["Matthieu Lefebvre (mpbl)"]
description = "Coinbase v3 Advanced API client for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/mpbl/coinbase-v3"
readme = "README.md"
keywords = ["coinbase", "api", "oauth", "trading"]
categories = ["api-bindings"]
rust-version = "1.69.0"
documentation = "https://docs.rs/coinbase-v3/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-stream = "0.3.5"
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
http = "0.2.9"
oauth2 = { version = "4.4.1", features = ["reqwest"] }
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_derive = "1.0.164"
serde_json = "1.0.99"
sha2 = "0.10.7"
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full"] }
tokio-test = "0.4.2"
uritemplate-next = "0.2.0"
url = "2.4.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
